[guides/customization.mdx] Changes of 762c50165022f703552b555d013e87dc85314966

--- a/docs/src/content/docs/pt-br/guides/customization.mdx
+++ b/docs/src/content/docs/pt-br/guides/customization.mdx
@@ -97,9 +97,7 @@ O Starlight possui suporte integrado para a geração de um sitemap. Habilite a 
 
 export default defineConfig({
   site: 'https://stargazers.club',
-  integrations: [
-    starlight({ title: 'Site com sitemap' }),
-  ],
+  integrations: [starlight({ title: 'Site com sitemap' })],
 });
 ```
 
