[showcase.mdx] Changes of e2b511ed23eaef44f7dc465e6b7b4b41edd018e8

--- a/docs/src/content/docs/pt-br/showcase.mdx
+++ b/docs/src/content/docs/pt-br/showcase.mdx
@@ -87,6 +87,11 @@ Starlight já está sendo utilizado em produção. Esses são alguns dos sites a
 		href="https://starter.obytes.com"
 		thumbnail="starter.obytes.com.jpg"
 	/>
+	<Card
+		title="Kanri"
+		href="https://kanriapp.com"
+		thumbnail="kanriapp.com.png"
+	/>
 </FluidGrid>
 
 Veja todos os [repositórios de projetos públicos utilizando Starlight no GitHub](https://github.com/withastro/starlight/network/dependents).
