Use uppercase for labels and update links in sidebar.mdx

--- a/docs/src/content/docs/guides/sidebar.mdx
+++ b/docs/src/content/docs/guides/sidebar.mdx
@@ -34,14 +34,14 @@ The following sidebar will be automatically generated:
 <SidebarPreview
 	config={[
 		{
-			label: 'guides',
+			label: 'Guides',
 			items: [
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 			],
 		},
 		{
-			label: 'reference',
+			label: 'Reference',
 			items: [
 				{ label: 'Configuration Reference', link: '/reference/configuration/' },
 			],
@@ -181,7 +181,7 @@ The following sidebar will be generated:
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'advanced',
+					label: 'Advanced',
 					items: [
 						{ label: 'Project Structure', link: '/guides/project-structure/' },
 					],
@@ -357,8 +357,8 @@ Browsing the documentation in Spanish will generate the following sidebar:
 		{
 			label: 'Guías',
 			items: [
-				{ label: 'Componentes', link: '/guides/components/' },
-				{ label: 'Internacionalización (i18n)', link: '/guides/i18n/' },
+				{ label: 'Componentes', link: '/es/guides/components/' },
+				{ label: 'Internacionalización (i18n)', link: '/es/guides/i18n/' },
 			],
 		},
 	]}
@@ -425,7 +425,7 @@ The configuration above generates the following sidebar:
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'advanced',
+					label: 'Advanced',
 					collapsed: true,
 					items: [
 						{ label: 'Project Structure', link: '/guides/project-structure/' },
@@ -462,7 +462,7 @@ The configuration above generates the following sidebar:
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'advanced',
+					label: 'Advanced',
 					collapsed: true,
 					items: [
 						{ label: 'Project Structure', link: '/guides/project-structure/' },
