--- a/docs/src/content/docs/ja/guides/sidebar.mdx
+++ b/docs/src/content/docs/ja/guides/sidebar.mdx
@@ -72,7 +72,7 @@ starlight({
 });
 ```
 
-The configuration above generates the following sidebar:
+上の設定により、以下のサイドバーが生成されます。
 
 <SidebarPreview
 	config={[
