--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Starlight 🌟 Build documentation sites with Astro
-description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
+title: 'Starlight 🌟 Build documentation sites with Astro'
+description: 'Starlight helps you build beautiful, high-performance documentation websites with Astro.'
 template: splash
 banner:
   content: |
