Revert the changes for labels

--- a/docs/src/content/docs/guides/sidebar.mdx
+++ b/docs/src/content/docs/guides/sidebar.mdx
@@ -34,14 +34,14 @@ The following sidebar will be automatically generated:
 <SidebarPreview
 	config={[
 		{
-			label: 'Guides',
+			label: 'guides',
 			items: [
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 			],
 		},
 		{
-			label: 'Reference',
+			label: 'reference',
 			items: [
 				{ label: 'Configuration Reference', link: '/reference/configuration/' },
 			],
@@ -181,7 +181,7 @@ The following sidebar will be generated:
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'Advanced',
+					label: 'advanced',
 					items: [
 						{ label: 'Project Structure', link: '/guides/project-structure/' },
 					],
@@ -425,7 +425,7 @@ The configuration above generates the following sidebar:
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'Advanced',
+					label: 'advanced',
 					collapsed: true,
 					items: [
 						{ label: 'Project Structure', link: '/guides/project-structure/' },
@@ -462,7 +462,7 @@ The configuration above generates the following sidebar:
 				{ label: 'Components', link: '/guides/components/' },
 				{ label: 'Internationalization (i18n)', link: '/guides/i18n/' },
 				{
-					label: 'Advanced',
+					label: 'advanced',
 					collapsed: true,
 					items: [
 						{ label: 'Project Structure', link: '/guides/project-structure/' },
