--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -92,6 +92,11 @@ Starlight is already being used in production. These are some of the sites aroun
 		href="https://kanriapp.com"
 		thumbnail="kanriapp.com.png"
 	/>
+	<Card
+		title="VRCFR Creator"
+		href="https://dev.vrchatfrance.fr"
+		thumbnail="kanriapp.com.png"
+	/>
 </FluidGrid>
 
 See all the [public project repos using Starlight on GitHub](https://github.com/withastro/starlight/network/dependents).
