--- a/docs/src/content/docs/showcase.mdx
+++ b/docs/src/content/docs/showcase.mdx
@@ -95,7 +95,7 @@ Starlight is already being used in production. These are some of the sites aroun
 	<Card
 		title="VRCFR Creator"
 		href="https://dev.vrchatfrance.fr"
-		thumbnail="kanriapp.com.png"
+		thumbnail="dev.vrchatfrance.fr.png"
 	/>
 </FluidGrid>
 
