fixed wording in docs

--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -214,9 +214,9 @@ export default defineConfig({
 
 ## Theme control
 
-Starlight provides three options for dark/light theme choise: `dark`, `light` and `auto`. `auto` uses users default environment settings to detect dark or ligh useage.
+Starlight provides three options for dark/light theme choise: `dark`, `light` and `auto`. `auto` uses users default environment settings to determine dark or ligh theme.
 
-There are cases, when a fixed `dark` or `light` default theme should be loaded by default, also in some cases it's required to make that option fixed.
+Starlight provides settings to change the default loaded theme and to show or hide theme selector.
 
 ```js
 // astro.config.mjs
