fix: add review suggestions
Co-authored-by: Emanuele Stoppa <my.burning@gmail.com>

--- a/docs/src/content/docs/it/guides/sidebar.mdx
+++ b/docs/src/content/docs/it/guides/sidebar.mdx
@@ -1,6 +1,6 @@
 ---
 title: Navigazione nella barra laterale
-description: scopri come impostare e personalizzare i collegamenti di navigazione della barra laterale del tuo sito Starlight.
+description: Scopri come impostare e personalizzare i collegamenti di navigazione della barra laterale del tuo sito Starlight.
 sidebar:
   badge: Nuovo
 ---
@@ -142,7 +142,7 @@ Starlight può generare automaticamente un gruppo nella barra laterale in base a
 Ciò è utile quando non desideri inserire manualmente ciascun elemento della barra laterale in un gruppo.
 Per impostazione predefinita, le pagine verranno ordinate alfabeticamente in base al nome del file.
 
-Aggiungi un gruppo generato automaticamente utilizzando un oggetto con le proprietà `label` e `autogenerate`. La tua configurazione di `autogenerate` deve specificare la `directory` da utilizzare per le voci della barra laterale. Ad esempio, con la seguente configurazione:
+Aggiungi un gruppo generato automaticamente utilizzando un oggetto con le proprietà `label` e `autogenerate`. La tua configurazione di `autogenerate` deve specificare quale `directory` da utilizzare per le voci della barra laterale. Ad esempio, con la seguente configurazione:
 
 ```js
 starlight({
