fix: change article
Co-authored-by: Emanuele Stoppa <my.burning@gmail.com>

--- a/docs/src/content/docs/it/guides/sidebar.mdx
+++ b/docs/src/content/docs/it/guides/sidebar.mdx
@@ -87,7 +87,7 @@ Puoi aggiungere struttura alla barra laterale raggruppando i collegamenti correl
 I gruppi possono contenere sia collegamenti che altri sottogruppi.
 
 Aggiungi un gruppo utilizzando un oggetto con le proprietà `label` e `items`.
-Il `label` verrà utilizzato come intestazione del gruppo.
+`label` verrà utilizzato come intestazione del gruppo.
 Aggiungi collegamenti o sottogruppi all'array `items`.
 
 ```js
