--- a/docs/src/content/docs/pt-br/guides/customization.mdx
+++ b/docs/src/content/docs/pt-br/guides/customization.mdx
@@ -88,6 +88,19 @@ Você pode mostrar diferentes versões da sua logo no modo claro e escuro.
    }),
    ```
 
+## Habilitar o sitemap
+
+O Starlight possui suporte integrado para a geração de um sitemap. Habilite a geração do sitemap definindo sua URL como `site` em `astro.config.mjs`:
+
+```js
+// astro.config.mjs
+
+export default defineConfig({
+  site: 'https://stargazers.club',
+  integrations: [starlight({ title: 'Site com sitemap' })],
+});
+```
+
 ## Layout da página
 
 Por padrão, páginas do Starlight usam um layout com uma barra de navegação lateral global e um índice que mostra os cabeçalhos da página atual.
