Update Every Showcase.mdx in every lang

--- a/docs/src/content/docs/fr/showcase.mdx
+++ b/docs/src/content/docs/fr/showcase.mdx
@@ -87,6 +87,11 @@ Starlight est déjà utilisé en production. Voici quelques sites sur le web :
 		href="https://starter.obytes.com"
 		thumbnail="starter.obytes.com.jpg"
 	/>
+	<Card
+		title="VRCFR Creator"
+		href="https://dev.vrchatfrance.fr"
+		thumbnail="dev.vrchatfrance.fr.png"
+	/>
 </FluidGrid>
 
 Voir tous les [dépôts publics de projets utilisant Starlight sur GitHub](https://github.com/withastro/starlight/network/dependents).
