--- a/docs/src/content/docs/it/showcase.mdx
+++ b/docs/src/content/docs/it/showcase.mdx
@@ -92,6 +92,11 @@ Starlight è già utilizzato nella produzione. Questi sono alcuni dei siti prese
 		href="https://kanriapp.com"
 		thumbnail="kanriapp.com.png"
 	/>
+	<Card
+		title="VRCFR Creator"
+		href="https://dev.vrchatfrance.fr"
+		thumbnail="dev.vrchatfrance.fr.png"
+	/>
 </FluidGrid>
 
 Visualizza tutti i [repository di progetti pubblici che utilizzano Starlight su GitHub](https://github.com/withastro/starlight/network/dependents).
