--- a/docs/src/content/docs/zh/showcase.mdx
+++ b/docs/src/content/docs/zh/showcase.mdx
@@ -91,6 +91,11 @@ Starlight 已投入生产。 这些是网络上的一些网站：
 		href="https://kanriapp.com"
 		thumbnail="kanriapp.com.png"
 	/>
+	<Card
+		title="VRCFR Creator"
+		href="https://dev.vrchatfrance.fr"
+		thumbnail="dev.vrchatfrance.fr.png"
+	/>
 </FluidGrid>
 
 查看所有[在 GitHub 上使用 Starlight 的公共项目仓库](https://github.com/withastro/starlight/network/dependents)。
