--- a/packages/starlight/translations/he.json
+++ b/packages/starlight/translations/he.json
@@ -1,22 +1,22 @@
 {
-  "skipLink.label": "מעבר לתוכן",
+  "skipLink.label": "דלגו לתוכן",
   "search.label": "חיפוש",
   "search.shortcutLabel": "(לחצו / כדי לחפש)",
   "search.cancelLabel": "ביטול",
-  "search.devWarning": "חיפוש זמין בסביבת ייצור בלבד. \nנסו לבנות ולהציג את האתר כדי לבדוק אותו מקומית.",
-  "themeSelect.accessibleLabel": "בחירת ערכת נושא",
+  "search.devWarning": "החיפוש זמין רק בסביבת ייצור. \nנסו לבנות ולהציג תצוגה מקדימה של האתר כדי לבדוק אותו באופן מקומי.",
+  "themeSelect.accessibleLabel": "בחרו פרופיל צבע",
   "themeSelect.dark": "כהה",
   "themeSelect.light": "בהיר",
-  "themeSelect.auto": "אוטומטי",
-  "languageSelect.accessibleLabel": "בחירת שפה",
+  "themeSelect.auto": "מערכת",
+  "languageSelect.accessibleLabel": "בחרו שפה",
   "menuButton.accessibleLabel": "תפריט",
   "sidebarNav.accessibleLabel": "ראשי",
-  "tableOfContents.onThisPage": "בעמוד זה",
+  "tableOfContents.onThisPage": "בדף זה",
   "tableOfContents.overview": "סקירה כללית",
-  "i18n.untranslatedContent": "התוכן אינו זמין בשפה שלך עדיין.",
-  "page.editLink": "עריכת דף",
+  "i18n.untranslatedContent": "תוכן זה אינו זמין עדיין בשפה שלך.",
+  "page.editLink": "ערכו דף",
   "page.lastUpdated": "עדכון אחרון:",
   "page.previousLink": "הקודם",
   "page.nextLink": "הבא",
-  "404.text": "עמוד לא נמצא. בדקו את כתובת האינטרנט שלכם או נסו להשתמש בשורת הכתובות"
+  "404.text": "הדף לא נמצא. אנא בדקו את כתובת האתר או נסו להשתמש בסרגל החיפוש."
 }
