--- a/docs/src/content/docs/id/index.mdx
+++ b/docs/src/content/docs/id/index.mdx
@@ -12,7 +12,7 @@ banner:
       </span>
     </span>
 hero:
-  title: Wujudkan situs dokumentasi yang bersinar dengan Starlight
+  title: Buat dokumentasi yang bersinar dengan Starlight
   tagline: Semua yang Anda butuhkan untuk mewujudkan situs dokumentasi yang luar biasa. Cepat, ramah pengguna, dan sangat mudah digunakan.
   image:
     file: ../../../assets/hero-star.webp
@@ -32,7 +32,7 @@ import AboutAstro from '../../../components/about-astro.astro';
 <CardGrid stagger>
 	<Card title="Dokumentasi yang menawan" icon="open-book">
     Sudah termasuk: Navigasi situs, pencarian, terjemahan, SEO,
-    tipografi yang mudah dibaca, <i>code highlighting</i>, mode gelap,
+    tipografi yang mudah dibaca, _code highlighting_, mode gelap,
     dan masih banyak lagi.
 	</Card>
 	<Card title="Ditenagai oleh Astro" icon="rocket">
@@ -41,17 +41,17 @@ import AboutAstro from '../../../components/about-astro.astro';
 	</Card>
 	<Card title="Markdown, Markdoc, and MDX" icon="document">
 		Gunakan bahasa markup favorit Anda. Starlight menyediakan validasi
-		<i>frontmatter</i> bawaan dengan TypeScript <i>type-safety</i>.
+		_frontmatter_ bawaan dengan TypeScript _type-safety_.
 	</Card>
 	<Card title="Gunakan komponen UI pilihan Anda" icon="puzzle">
-		Starlight adalah solusi dokumentasi yang lengkap, dan <i>framework-agnostic</i>. 
+		Starlight adalah solusi dokumentasi yang lengkap dan _framework-agnostic_. 
     Kembangkan lebih jauh dengan React, Vue, Svelte, Solid, dan lain-lain.
 	</Card>
 </CardGrid>
 
 <AboutAstro title="Dipersembahkan oleh">
-Astro adalah <i>framework</i> web serbaguna didesain untuk web yang cepat.
-Gunakan konten Anda dari sumber mana saja dan <i>deploy</i> di mana saja, 
+Astro adalah _framework_ web serbaguna didesain untuk web yang cepat.
+Gunakan konten Anda dari sumber mana saja dan _deploy_ di mana saja, 
 semua ditenagai dengan pustaka dan komponen UI favorit Anda.
 
 [Pelajari tentang Astro](https://astro.build/)
