fix showcase translaten (Sie -> du)

--- a/docs/src/content/docs/de/showcase.mdx
+++ b/docs/src/content/docs/de/showcase.mdx
@@ -1,11 +1,11 @@
 ---
 title: Starlight Showcase
-description: Entdecken Sie Seiten, die mit Starlight gebaut wurden und Community-Tools, die Starlight erweitern!
+description: Entdecke Seiten, die mit Starlight gebaut wurden und Community-Tools, die Starlight erweitern!
 ---
 
-:::tip[Fügen Sie Ihre eigene hinzu!]
-Haben Sie eine Starlight-Site oder ein Tool für Starlight gebaut?
-Eröffnen Sie einen PR und fügen Sie einen Link zu dieser Seite hinzu!
+:::tip[Füge deine eigene hinzu!]
+Hast du eine Starlight-Webseite oder ein Tool für Starlight gebaut?
+Eröffne einen PR und füge einen Link zu dieser Seite hinzu!
 :::
 
 ## Seiten
