some adjustments due to style guide

--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -3,7 +3,7 @@ title: CSS & Styling
 description: Lerne, wie du deine Starlight-Seite mit benutzerdefiniertem CSS gestalten oder mit Tailwind CSS integrieren kannst.
 ---
 
-Du kannst deine Starlight-Webseite mit benutzerdefinierten CSS-Dateien gestalten oder das Starlight Tailwind-Plugin verwenden.
+Du kannst deine Starlight-Website mit benutzerdefinierten CSS-Dateien gestalten oder das Starlight Tailwind-Plugin verwenden.
 
 ## Benutzerdefinierte CSS-Stile
 
@@ -279,7 +279,7 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 >
 	<Fragment slot="css-docs">
 		Füge das folgende CSS in deinem Projekt in einer [custom CSS
-		Datei](#custom-css-styles), um dieses Thema auf deiner Webseite anzuwenden.
+		Datei](#custom-css-styles), um dieses Thema auf deiner Website anzuwenden.
 	</Fragment>
 	<Fragment slot="tailwind-docs">
 		Das folgende Beispiel
