--- a/docs/src/content/docs/de/guides/customization.mdx
+++ b/docs/src/content/docs/de/guides/customization.mdx
@@ -96,7 +96,7 @@ Starlight hat eine eingebaute Unterstützung für die Erstellung einer Sitemap. 
 
 export default defineConfig({
 	site: 'https://stargazers.club',
-	integrations: [starlight({ title: 'Webseite mit Sitemap' })],
+	integrations: [starlight({ title: 'Website mit Sitemap' })],
 });
 ```
 
@@ -263,7 +263,7 @@ Du kannst dies anpassen, indem du eine `404.md` (oder `404.mdx`) Datei zu deinem
 
 </FileTree>
 
-Du kannst alle Seitenlayout- und Anpassungstechniken von Starlight in deiner 404-Seite verwenden. Zum Beispiel verwendet die Standard 404 Seite die [`splash` Vorlage](#seitenlayout) und [`hero`](/de/reference/frontmatter/#hero) Komponente in frontmatter:
+Du kannst alle Seitenlayout- und Anpassungstechniken von Starlight in deiner 404-Seite verwenden. Zum Beispiel verwendet die Standard 404-Seite die [`splash` Vorlage](#seitenlayout) und [`hero`](/de/reference/frontmatter/#hero) Komponente in Frontmatter:
 
 ```md
 ---
@@ -348,7 +348,7 @@ Es bietet npm-Module, die du für die gewünschten Schriftarten installieren kan
     In diesem Beispiel wird [IBM Plex Serif](https://fontsource.org/fonts/ibm-plex-serif) verwendet.
 
 2.  Installiere das Paket für deine gewählte Schriftart.
-    Du findest den Namen des Pakets, indem du auf der Fontsource-Webseite auf `Installieren` klicken.
+    Du findest den Namen des Pakets, indem du auf der Fontsource-Website auf `Installieren` klicken.
 
          <Tabs>
 
