--- a/docs/src/content/docs/de/showcase.mdx
+++ b/docs/src/content/docs/de/showcase.mdx
@@ -4,7 +4,7 @@ description: Entdecke Seiten, die mit Starlight gebaut wurden und Community-Tool
 ---
 
 :::tip[Füge deine eigene hinzu!]
-Hast du eine Starlight-Webseite oder ein Tool für Starlight gebaut?
+Hast du eine Starlight-Website oder ein Tool für Starlight gebaut?
 Eröffne einen PR und füge einen Link zu dieser Seite hinzu!
 :::
 
@@ -12,7 +12,7 @@ Eröffne einen PR und füge einen Link zu dieser Seite hinzu!
 
 import ShowcaseSites from '../../../components/showcase-sites.astro';
 
-Starlight wird bereits in der Produktion eingesetzt. Dies sind einige der Webseiten, die im Internet zu finden sind:
+Starlight wird bereits in der Produktion eingesetzt. Dies sind einige der Websiten, die im Internet zu finden sind:
 
 <ShowcaseSites />
 
