--- a/docs/src/content/docs/de/getting-started.mdx
+++ b/docs/src/content/docs/de/getting-started.mdx
@@ -38,7 +38,7 @@ yarn create astro --template starlight
 </TabItem>
 </Tabs>
 
-Damit wird ein neues [Projektverzeichnis](/de/guides/project-structure/) mit allen erforderlichen Dateien und Konfigurationen für deine Webseite erstellt.
+Damit wird ein neues [Projektverzeichnis](/de/guides/project-structure/) mit allen erforderlichen Dateien und Konfigurationen für deine Website erstellt.
 
 :::tip[In Aktion sehen]
 Probiere Starlight in deinem Browser aus:
@@ -55,7 +55,7 @@ Starlight unterstützt das Erstellen von Inhalten in Markdown und MDX. (Du kanns
 
 ### Seiten hinzufügen
 
-Füge neue Seiten zu deiner Webseite automatisch hinzu, indem du `.md` oder `.mdx` Dateien in `src/content/docs/` erstellst. Erstelle Unterordner, um deine Dateien zu organisieren und mehrere Pfadsegmente zu erstellen:
+Füge neue Seiten zu deiner Website automatisch hinzu, indem du `.md` oder `.mdx` Dateien in `src/content/docs/` erstellst. Erstelle Unterordner, um deine Dateien zu organisieren und mehrere Pfadsegmente zu erstellen:
 
 ```
 src/content/docs/hello-world.md => your-site.com/hello-world
@@ -75,11 +75,11 @@ description: This is a page in my Starlight-powered site
 
 Wenn du etwas Wichtiges vergisst, wird Starlight dich daran erinnern.
 
-## Veröffentlichung deiner Starlight Webseite
+## Veröffentlichung deiner Starlight Website
 
-Sobald du deine Starlight Webseite erstellt und angepasst hast, kannst du sie auf einen Webserver oder Hosting-Plattform deiner Wahl veröffentlichen, einschließlich Netlify, Vercel, GitHub Pages und vielen mehr.
+Sobald du deine Starlight Website erstellt und angepasst hast, kannst du sie auf einen Webserver oder Hosting-Plattform deiner Wahl veröffentlichen, einschließlich Netlify, Vercel, GitHub Pages und vielen mehr.
 
-[Lerne mehr über die Veröffentlichung einer Astro Webseite in der Astro Dokumentation.](https://docs.astro.build/de/guides/deploy/)
+[Lerne mehr über die Veröffentlichung einer Astro Website in der Astro Dokumentation.](https://docs.astro.build/de/guides/deploy/)
 
 ## Starlight aktualisieren
 
