--- a/docs/src/content/docs/id/manual-setup.mdx
+++ b/docs/src/content/docs/id/manual-setup.mdx
@@ -94,7 +94,7 @@ Selamat datang di proyek tugas kuliah saya!
 ```
 
 Starlight menggunakan _file-based routing_, yang artinya setiap file Markdown, MDX, atau Markdoc dalam folder `src/content/docs/` akan dirubah menjadi sebuah halaman di situs Anda. _Metadata frontmatter_ (kolom `title` dan `description` pada contoh di atas) dapat juga mempengaruhi tampilan halaman tersebut.
-Untk melihat semua opsi yang tersedia, rujuklah halaman [referensi _frontmatter_](/reference/frontmatter/).
+Untk melihat semua opsi yang tersedia, rujuklah halaman [referensi _frontmatter_](/id/reference/frontmatter/).
 
 ## Tips untuk situs yang sudah ada
 
