i18n(ko-KR): update `sidebar.mdx`

--- a/docs/src/content/docs/ko/guides/sidebar.mdx
+++ b/docs/src/content/docs/ko/guides/sidebar.mdx
@@ -357,8 +357,8 @@ starlight({
 		{
 			label: 'Guías',
 			items: [
-				{ label: 'Componentes', link: '/ko/guides/components/' },
-				{ label: 'Internacionalización (i18n)', link: '/ko/guides/i18n/' },
+				{ label: 'Componentes', link: '/es/guides/components/' },
+				{ label: 'Internacionalización (i18n)', link: '/es/guides/i18n/' },
 			],
 		},
 	]}
