--- a/docs/src/content/docs/de/guides/components.mdx
+++ b/docs/src/content/docs/de/guides/components.mdx
@@ -117,7 +117,7 @@ Der obige Code erzeugt folgendes auf der Seite:
 	</Card>
 </CardGrid>
 
-:::tip
+:::tip[Tipp]
 Verwende ein Kartengitter auf deiner Homepage, um die wichtigsten Merkmale deines Projekts darzustellen.
 Füge das Attribut `stagger` hinzu, um die zweite Spalte der Karten vertikal zu verschieben und visuell interessant zu gestalten:
 
