--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -278,8 +278,8 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 	}}
 >
 	<Fragment slot="css-docs">
-		Füge das folgende CSS in deinem Projekt in einer [custom CSS
-		Datei](#custom-css-styles), um dieses Thema auf deiner Website anzuwenden.
+		Füge das folgende CSS in deinem Projekt in eine [benutzerdefinierte CSS-Datei](#custom-css-styles) 
+		ein, um dieses Theme auf deiner Website anzuwenden.
 	</Fragment>
 	<Fragment slot="tailwind-docs">
 		Das folgende Beispiel
