Update getting-started.mdx (tip -> Tipp)

--- a/docs/src/content/docs/de/getting-started.mdx
+++ b/docs/src/content/docs/de/getting-started.mdx
@@ -83,7 +83,7 @@ Sobald du deine Starlight Website erstellt und angepasst hast, kannst du sie auf
 
 ## Starlight aktualisieren
 
-:::tip
+:::tip[Tipp]
 Da es sich bei Starlight um eine Beta-Software handelt, wird es regelmäßig Updates und Verbesserungen geben. Achte darauf Starlight regelmäßig zu aktualisieren!
 :::
 
