--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -231,7 +231,7 @@ Eine autogenerierte Gruppe, die eine Seite mit dem obigen Frontmatter enthält, 
 	]}
 />
 
-:::note
+:::note[Anmerkung]
 Die `sidebar` Frontmatter Konfiguration wird nur für automatisch generierte Links verwendet und wird für manuell definierte Links ignoriert.
 :::
 
