--- a/docs/src/content/docs/es/guides/i18n.mdx
+++ b/docs/src/content/docs/es/guides/i18n.mdx
@@ -174,25 +174,26 @@ Estos son los valores predeterminados en inglés de las cadenas existentes que s
 
 ```json
 {
-	"skipLink.label": "Skip to content",
-	"search.label": "Search",
-	"search.shortcutLabel": "(Press / to Search)",
-	"search.cancelLabel": "Cancel",
-	"search.devWarning": "Search is only available in production builds. \nTry building and previewing the site to test it out locally.",
-	"themeSelect.accessibleLabel": "Select theme",
-	"themeSelect.dark": "Dark",
-	"themeSelect.light": "Light",
-	"themeSelect.auto": "Auto",
-	"languageSelect.accessibleLabel": "Select language",
+	"skipLink.label": "Saltar al contenido",
+	"search.label": "Buscar",
+	"search.shortcutLabel": "(Presiona / para buscar)",
+	"search.cancelLabel": "Cancelar",
+	"search.devWarning": "La búsqueda solo está disponible en versiones de producción. \nIntenta construir y previsualizar el sitio para probarlo localmente.",
+	"themeSelect.accessibleLabel": "Seleccionar tema",
+	"themeSelect.dark": "Oscuro",
+	"themeSelect.light": "Claro",
+	"themeSelect.auto": "Automático",
+	"languageSelect.accessibleLabel": "Seleccionar idioma",
 	"menuButton.accessibleLabel": "Menu",
-	"sidebarNav.accessibleLabel": "Main",
-	"tableOfContents.onThisPage": "On this page",
-	"tableOfContents.overview": "Overview",
-	"i18n.untranslatedContent": "This content is not available in your language yet.",
-	"page.editLink": "Edit page",
-	"page.lastUpdated": "Last updated:",
-	"page.previousLink": "Next",
-	"page.nextLink": "Previous"
+	"sidebarNav.accessibleLabel": "Principal",
+	"tableOfContents.onThisPage": "En esta página",
+	"tableOfContents.overview": "Resumen",
+	"i18n.untranslatedContent": "Este contenido aún no está disponible en tu idioma.",
+	"page.editLink": "Editar página",
+	"page.lastUpdated": "Actualizado:",
+	"page.previousLink": "Siguiente",
+   	"page.nextLink": "Anterior",
+   	"404.text": "Página no encontrada. Verifica la URL o intenta usar la barra de búsqueda."
 }
 ```
 
@@ -201,15 +202,15 @@ Puedes establecer traducciones para la UI de Pagefind en el mismo archivo JSON u
 
 ```json
 {
-	"pagefind.clear_search": "Clear",
-	"pagefind.load_more": "Load more results",
-	"pagefind.search_label": "Search this site",
-	"pagefind.filters_label": "Filters",
-	"pagefind.zero_results": "No results for [SEARCH_TERM]",
-	"pagefind.many_results": "[COUNT] results for [SEARCH_TERM]",
-	"pagefind.one_result": "[COUNT] result for [SEARCH_TERM]",
-	"pagefind.alt_search": "No results for [SEARCH_TERM]. Showing results for [DIFFERENT_TERM] instead",
-	"pagefind.search_suggestion": "No results for [SEARCH_TERM]. Try one of the following searches:",
-	"pagefind.searching": "Searching for [SEARCH_TERM]..."
+	"pagefind.clear_search": "Borrar",
+	"pagefind.load_more": "Cargar más resultados",
+	"pagefind.search_label": "Buscar en este sitio",
+	"pagefind.filters_label": "Filtros",
+	"pagefind.zero_results": "No hay resultados para [SEARCH_TERM]",
+	"pagefind.many_results": "[COUNT] resultados para [SEARCH_TERM]",
+	"pagefind.one_result": "[COUNT] resultado para [SEARCH_TERM]",
+	"pagefind.alt_search": "No hay resultados para [SEARCH_TERM]. Mostrando resultados para [DIFFERENT_TERM] en su lugar",
+	"pagefind.search_suggestion": "No hay resultados para [SEARCH_TERM]. Prueba con una de las siguientes búsquedas:",
+	"pagefind.searching": "Buscando [SEARCH_TERM]..."
 }
 ```
