--- a/docs/src/content/docs/es/guides/i18n.mdx
+++ b/docs/src/content/docs/es/guides/i18n.mdx
@@ -192,7 +192,8 @@ Estos son los valores predeterminados en inglés de las cadenas existentes que s
 	"page.editLink": "Edit page",
 	"page.lastUpdated": "Last updated:",
 	"page.previousLink": "Next",
-	"page.nextLink": "Previous"
+   	"page.nextLink": "Previous",
+   	"404.text": "Page not found. Check the URL or try using the search bar."
 }
 ```
 
