--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -436,7 +436,7 @@ Die obige Konfiguration erzeugt die folgende Seitenleiste:
 	]}
 />
 
-Dieses Verhalten kann durch die Definition der Eigenschaft "autogenerate.collapsed" außer Kraft gesetzt werden.
+Dieses Verhalten kann durch die Definition der Eigenschaft `autogenerate.collapsed` außer Kraft gesetzt werden.
 
 ```js
 starlight({
