--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -171,7 +171,7 @@ Und die folgende Dateistruktur:
 
 </FileTree>
 
-Die folgende Seitenleiste wird erzeugt:
+Wird die folgende Seitenleiste erzeugt:
 
 <SidebarPreview
 	config={[
