--- a/docs/src/content/docs/de/guides/sidebar.mdx
+++ b/docs/src/content/docs/de/guides/sidebar.mdx
@@ -29,7 +29,7 @@ Zum Beispiel, wenn du die folgende Dateistruktur hast:
 
 </FileTree>
 
-Die folgende Seitenleiste wird automatisch generiert:
+Wird die folgende Seitenleiste automatisch generiert:
 
 <SidebarPreview
 	config={[
