--- a/docs/src/content/docs/de/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/de/guides/css-and-tailwind.mdx
@@ -196,7 +196,7 @@ Wenn du bereits eine Starlight-Site hast und Tailwind-CSS hinzufügen möchtest,
 
 ### Starlight mit Tailwind designen
 
-Starlight verwendet Werte aus deiner [Tailwind theme config](https://tailwindcss.com/docs/theme) in der Benutzeroberfläche.
+Starlight verwendet Werte aus deiner [Tailwind-Theme-Konfiguration](https://tailwindcss.com/docs/theme) in der Benutzeroberfläche.
 
 Falls gesetzt, überschreiben die folgenden Optionen die Standard-Stile von Starlight:
 
