--- a/docs/src/content/docs/de/guides/i18n.mdx
+++ b/docs/src/content/docs/de/guides/i18n.mdx
@@ -175,7 +175,7 @@ Du kannst Übersetzungen für zusätzliche Sprachen, die du unterstützt, über 
 
 3. Füge Übersetzungen für die Schlüssel hinzu, die du in die JSON-Dateien übersetzen möchtest. Übersetze nur die Werte und lasse die Schlüssel in Englisch (z.B. `"search.label": "Buscar"`).
 
-   Dies sind die englischen Standardwerte der vorhandenen Zeichenketten, mit denen Starlight ausgeliefert wird:
+   Dies sind die englischen Standardwerte der vorhandenen Strings, mit denen Starlight ausgeliefert wird:
 
    ```json
    {
